@@ -87,6 +87,19 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|LowerCaseFilter
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|TokenStream
 import|;
 end_import
@@ -230,11 +243,34 @@ argument_list|(
 name|source
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|matchVersion
+operator|.
+name|onOrAfter
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_31
+argument_list|)
+condition|)
+name|result
+operator|=
+operator|new
+name|LowerCaseFilter
+argument_list|(
+name|matchVersion
+argument_list|,
+name|result
+argument_list|)
+expr_stmt|;
 name|result
 operator|=
 operator|new
 name|ThaiWordFilter
 argument_list|(
+name|matchVersion
+argument_list|,
 name|result
 argument_list|)
 expr_stmt|;
