@@ -47,6 +47,26 @@ import|;
 end_import
 begin_import
 import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|text
+operator|.
+name|Segment
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|text
+operator|.
+name|BreakIterator
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -81,6 +101,34 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|LowerCaseFilter
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|tokenattributes
+operator|.
+name|PositionIncrementAttribute
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|tokenattributes
 operator|.
 name|OffsetAttribute
@@ -98,20 +146,37 @@ name|analysis
 operator|.
 name|tokenattributes
 operator|.
-name|TermAttribute
+name|CharTermAttribute
 import|;
 end_import
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|text
+name|apache
 operator|.
-name|BreakIterator
+name|lucene
+operator|.
+name|util
+operator|.
+name|AttributeSource
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|Version
 import|;
 end_import
 begin_comment
-comment|/**  * {@link TokenFilter} that use {@link java.text.BreakIterator} to break each   * Token that is Thai into separate Token(s) for each Thai word.  * @version 0.2  */
+comment|/**  * {@link TokenFilter} that use {@link java.text.BreakIterator} to break each   * Token that is Thai into separate Token(s) for each Thai word.  *<p>Please note: Since matchVersion 3.1 on, this filter no longer lowercases non-thai text.  * {@link ThaiAnalyzer} will insert a {@link LowerCaseFilter} before this filter  * so the behaviour of the Analyzer does not change. With version 3.1, the filter handles  * position increments correctly.  */
 end_comment
 begin_class
 DECL|class|ThaiWordFilter
@@ -124,43 +189,10 @@ name|TokenFilter
 block|{
 DECL|field|breaker
 specifier|private
+specifier|final
 name|BreakIterator
 name|breaker
 init|=
-literal|null
-decl_stmt|;
-DECL|field|termAtt
-specifier|private
-name|TermAttribute
-name|termAtt
-decl_stmt|;
-DECL|field|offsetAtt
-specifier|private
-name|OffsetAttribute
-name|offsetAtt
-decl_stmt|;
-DECL|field|thaiState
-specifier|private
-name|State
-name|thaiState
-init|=
-literal|null
-decl_stmt|;
-DECL|method|ThaiWordFilter
-specifier|public
-name|ThaiWordFilter
-parameter_list|(
-name|TokenStream
-name|input
-parameter_list|)
-block|{
-name|super
-argument_list|(
-name|input
-argument_list|)
-expr_stmt|;
-name|breaker
-operator|=
 name|BreakIterator
 operator|.
 name|getWordInstance
@@ -171,23 +203,154 @@ argument_list|(
 literal|"th"
 argument_list|)
 argument_list|)
-expr_stmt|;
+decl_stmt|;
+DECL|field|charIterator
+specifier|private
+specifier|final
+name|Segment
+name|charIterator
+init|=
+operator|new
+name|Segment
+argument_list|()
+decl_stmt|;
+DECL|field|handlePosIncr
+specifier|private
+specifier|final
+name|boolean
+name|handlePosIncr
+decl_stmt|;
+DECL|field|termAtt
+specifier|private
+specifier|final
+name|CharTermAttribute
 name|termAtt
-operator|=
+init|=
 name|addAttribute
 argument_list|(
-name|TermAttribute
+name|CharTermAttribute
 operator|.
 name|class
 argument_list|)
-expr_stmt|;
+decl_stmt|;
+DECL|field|offsetAtt
+specifier|private
+specifier|final
+name|OffsetAttribute
 name|offsetAtt
-operator|=
+init|=
 name|addAttribute
 argument_list|(
 name|OffsetAttribute
 operator|.
 name|class
+argument_list|)
+decl_stmt|;
+DECL|field|posAtt
+specifier|private
+specifier|final
+name|PositionIncrementAttribute
+name|posAtt
+init|=
+name|addAttribute
+argument_list|(
+name|PositionIncrementAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+DECL|field|clonedToken
+specifier|private
+name|AttributeSource
+name|clonedToken
+init|=
+literal|null
+decl_stmt|;
+DECL|field|clonedTermAtt
+specifier|private
+name|CharTermAttribute
+name|clonedTermAtt
+init|=
+literal|null
+decl_stmt|;
+DECL|field|clonedOffsetAtt
+specifier|private
+name|OffsetAttribute
+name|clonedOffsetAtt
+init|=
+literal|null
+decl_stmt|;
+DECL|field|hasMoreTokensInClone
+specifier|private
+name|boolean
+name|hasMoreTokensInClone
+init|=
+literal|false
+decl_stmt|;
+comment|/** Creates a new ThaiWordFilter that also lowercases non-thai text.    * @deprecated Use the ctor with {@code matchVersion} instead!    */
+annotation|@
+name|Deprecated
+DECL|method|ThaiWordFilter
+specifier|public
+name|ThaiWordFilter
+parameter_list|(
+name|TokenStream
+name|input
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_30
+argument_list|,
+name|input
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** Creates a new ThaiWordFilter with the specified match version. */
+DECL|method|ThaiWordFilter
+specifier|public
+name|ThaiWordFilter
+parameter_list|(
+name|Version
+name|matchVersion
+parameter_list|,
+name|TokenStream
+name|input
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|matchVersion
+operator|.
+name|onOrAfter
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_31
+argument_list|)
+condition|?
+name|input
+else|:
+operator|new
+name|LowerCaseFilter
+argument_list|(
+name|matchVersion
+argument_list|,
+name|input
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|handlePosIncr
+operator|=
+name|matchVersion
+operator|.
+name|onOrAfter
+argument_list|(
+name|Version
+operator|.
+name|LUCENE_31
 argument_list|)
 expr_stmt|;
 block|}
@@ -195,7 +358,6 @@ annotation|@
 name|Override
 DECL|method|incrementToken
 specifier|public
-specifier|final
 name|boolean
 name|incrementToken
 parameter_list|()
@@ -204,9 +366,7 @@ name|IOException
 block|{
 if|if
 condition|(
-name|thaiState
-operator|!=
-literal|null
+name|hasMoreTokensInClone
 condition|)
 block|{
 name|int
@@ -234,18 +394,20 @@ operator|.
 name|DONE
 condition|)
 block|{
-name|restoreState
+name|clonedToken
+operator|.
+name|copyTo
 argument_list|(
-name|thaiState
+name|this
 argument_list|)
 expr_stmt|;
 name|termAtt
 operator|.
-name|setTermBuffer
+name|copyBuffer
 argument_list|(
-name|termAtt
+name|clonedTermAtt
 operator|.
-name|termBuffer
+name|buffer
 argument_list|()
 argument_list|,
 name|start
@@ -259,14 +421,14 @@ name|offsetAtt
 operator|.
 name|setOffset
 argument_list|(
-name|offsetAtt
+name|clonedOffsetAtt
 operator|.
 name|startOffset
 argument_list|()
 operator|+
 name|start
 argument_list|,
-name|offsetAtt
+name|clonedOffsetAtt
 operator|.
 name|startOffset
 argument_list|()
@@ -274,49 +436,53 @@ operator|+
 name|end
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|handlePosIncr
+condition|)
+name|posAtt
+operator|.
+name|setPositionIncrement
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
 return|return
 literal|true
 return|;
 block|}
-name|thaiState
+name|hasMoreTokensInClone
 operator|=
-literal|null
+literal|false
 expr_stmt|;
 block|}
 if|if
 condition|(
+operator|!
 name|input
 operator|.
 name|incrementToken
 argument_list|()
-operator|==
-literal|false
-operator|||
-name|termAtt
-operator|.
-name|termLength
-argument_list|()
-operator|==
-literal|0
 condition|)
+block|{
 return|return
 literal|false
 return|;
-name|String
-name|text
-init|=
-name|termAtt
-operator|.
-name|term
-argument_list|()
-decl_stmt|;
+block|}
 if|if
 condition|(
+name|termAtt
+operator|.
+name|length
+argument_list|()
+operator|==
+literal|0
+operator|||
 name|UnicodeBlock
 operator|.
 name|of
 argument_list|(
-name|text
+name|termAtt
 operator|.
 name|charAt
 argument_list|(
@@ -329,30 +495,90 @@ operator|.
 name|THAI
 condition|)
 block|{
-name|termAtt
-operator|.
-name|setTermBuffer
-argument_list|(
-name|text
-operator|.
-name|toLowerCase
-argument_list|()
-argument_list|)
-expr_stmt|;
 return|return
 literal|true
 return|;
 block|}
-name|thaiState
+name|hasMoreTokensInClone
 operator|=
-name|captureState
+literal|true
+expr_stmt|;
+comment|// we lazy init the cloned token, as in ctor not all attributes may be added
+if|if
+condition|(
+name|clonedToken
+operator|==
+literal|null
+condition|)
+block|{
+name|clonedToken
+operator|=
+name|cloneAttributes
+argument_list|()
+expr_stmt|;
+name|clonedTermAtt
+operator|=
+name|clonedToken
+operator|.
+name|getAttribute
+argument_list|(
+name|CharTermAttribute
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|clonedOffsetAtt
+operator|=
+name|clonedToken
+operator|.
+name|getAttribute
+argument_list|(
+name|OffsetAttribute
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|this
+operator|.
+name|copyTo
+argument_list|(
+name|clonedToken
+argument_list|)
+expr_stmt|;
+block|}
+comment|// reinit CharacterIterator
+name|charIterator
+operator|.
+name|array
+operator|=
+name|clonedTermAtt
+operator|.
+name|buffer
+argument_list|()
+expr_stmt|;
+name|charIterator
+operator|.
+name|offset
+operator|=
+literal|0
+expr_stmt|;
+name|charIterator
+operator|.
+name|count
+operator|=
+name|clonedTermAtt
+operator|.
+name|length
 argument_list|()
 expr_stmt|;
 name|breaker
 operator|.
 name|setText
 argument_list|(
-name|text
+name|charIterator
 argument_list|)
 expr_stmt|;
 name|int
@@ -374,12 +600,8 @@ condition|)
 block|{
 name|termAtt
 operator|.
-name|setTermBuffer
+name|setLength
 argument_list|(
-name|text
-argument_list|,
-literal|0
-argument_list|,
 name|end
 argument_list|)
 expr_stmt|;
@@ -387,12 +609,12 @@ name|offsetAtt
 operator|.
 name|setOffset
 argument_list|(
-name|offsetAtt
+name|clonedOffsetAtt
 operator|.
 name|startOffset
 argument_list|()
 argument_list|,
-name|offsetAtt
+name|clonedOffsetAtt
 operator|.
 name|startOffset
 argument_list|()
@@ -400,6 +622,7 @@ operator|+
 name|end
 argument_list|)
 expr_stmt|;
+comment|// position increment keeps as it is for first token
 return|return
 literal|true
 return|;
@@ -423,9 +646,9 @@ operator|.
 name|reset
 argument_list|()
 expr_stmt|;
-name|thaiState
+name|hasMoreTokensInClone
 operator|=
-literal|null
+literal|false
 expr_stmt|;
 block|}
 block|}
